# neco-editor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README-ja.md  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml
codigen/: module.kdl
neco-decor/: CHANGELOG.md  Cargo.toml  README-ja.md  README.md
neco-decor/src/: lib.rs
neco-diffcore/: Cargo.toml  README-ja.md  README.md
neco-diffcore/src/: lib.rs
neco-editor/: Cargo.toml  README-ja.md  README.md
neco-editor-gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
neco-editor-gui/src/: app.css  main.ts  slate-nocturne.kdl  vite-env.d.ts
neco-editor-gui/src-tauri/: Cargo.toml  tauri.conf.json
neco-editor-gui/src-tauri/capabilities/: default.json
neco-editor-gui/src-tauri/src/: lib.rs  main.rs
neco-editor-search/: Cargo.toml  README-ja.md  README.md
neco-editor-search/src/: lib.rs
neco-editor-ts/: README-ja.md  README.md  package-lock.json  package.json  tsconfig.json
neco-editor-ts/src/: clipboard.ts  coordinates.ts  editor-view.ts  editor.ts  index.ts  input.ts  metrics.ts  mouse.ts  renderer.ts  scroll.ts  styles.css  theme.ts  types.ts  webgpu-renderer.ts
neco-editor-ts/src/composition/: tracker.ts
neco-editor-ts/test/: editor-view-options.test.ts  theme-kdl.test.ts
neco-editor-viewport/: Cargo.toml  README-ja.md  README.md
neco-editor-viewport/src/: lib.rs
neco-editor-wasm/: Cargo.toml  README-ja.md  README.md
neco-editor-wasm/src/: lib.rs
neco-editor/src/: lib.rs
neco-filetree/: CHANGELOG.md  Cargo.toml  README-ja.md  README.md
neco-filetree/src/: lib.rs
neco-history/: Cargo.toml  README-ja.md  README.md
neco-history/src/: lib.rs
neco-pathrel/: Cargo.toml  README-ja.md  README.md
neco-pathrel/src/: lib.rs
neco-syntax-textmate/: Cargo.toml  README-ja.md  README.md  build.rs
neco-syntax-textmate/grammars/: THIRD-PARTY-LICENSES
neco-syntax-textmate/grammars/mojo/: mojo.sublime-syntax
neco-syntax-textmate/grammars/pkl/: pkl.sublime-syntax
neco-syntax-textmate/src/: lib.rs
neco-textpatch/: CHANGELOG.md  Cargo.toml  README-ja.md  README.md
neco-textpatch/src/: lib.rs
neco-textview/: CHANGELOG.md  Cargo.toml  README-ja.md  README.md
neco-textview/src/: lib.rs
neco-watchnorm/: Cargo.toml  README-ja.md  README.md
neco-watchnorm/src/: lib.rs
neco-wrap/: Cargo.toml  README-ja.md  README.md
neco-wrap/src/: lib.rs
