[workspace]
members = [
    "neco-pathrel",
    "neco-filetree",
    "neco-textpatch",
    "neco-watchnorm",
    "neco-textview",
    "neco-decor",
    "neco-diffcore",
    "neco-wrap",
    "neco-history",
    "neco-syntax-textmate",
    "neco-editor",
]
default-members = [
    "neco-pathrel",
    "neco-filetree",
    "neco-textpatch",
    "neco-watchnorm",
    "neco-textview",
    "neco-decor",
    "neco-diffcore",
    "neco-wrap",
    "neco-history",
    "neco-syntax-textmate",
    "neco-editor",
]
resolver = "2"
