[workspace]
members = [
    "neco-pathrel",
    "neco-filetree",
    "neco-textpatch",
    "neco-watchnorm",
    "neco-textview",
    "neco-decor",
    "neco-diffcore",
    "neco-wrap",
    "neco-history",
    "neco-syntax-textmate",
    "neco-editor",
    "neco-editor-viewport",
    "neco-editor-search",
]
default-members = [
    "neco-pathrel",
    "neco-filetree",
    "neco-textpatch",
    "neco-watchnorm",
    "neco-textview",
    "neco-decor",
    "neco-diffcore",
    "neco-wrap",
    "neco-history",
    "neco-syntax-textmate",
    "neco-editor",
    "neco-editor-viewport",
    "neco-editor-search",
]
resolver = "2"
