[package]
name = "neco-editor-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "WebAssembly bindings for neco-editor"
repository = "https://github.com/barineco/neco-editor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neco-editor = { version = "0.1", path = "../neco-editor" }
neco-editor-viewport = { version = "0.1", path = "../neco-editor-viewport" }
neco-editor-search = { version = "0.1", path = "../neco-editor-search" }
neco-syntax-textmate = { version = "0.1", path = "../neco-syntax-textmate" }
wasm-bindgen = "0.2"
js-sys = "0.3"
