[package]
name = "neco-pathrel"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Policy-driven path relation and rename remap helpers for workspace runtimes"
repository = "https://github.com/barineco/neco-editor"
readme = "README.md"
documentation = "https://docs.rs/neco-pathrel"
keywords = ["path", "rename", "workspace", "relation", "helper"]
categories = ["filesystem", "algorithms", "data-structures"]
exclude = ["workspace.kdl"]

[features]
default = []
