[package]
name = "neco-syntax-textmate"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/barineco/neco-editor"
readme = "README.md"
documentation = "https://docs.rs/neco-syntax-textmate"
keywords = ["syntax", "textmate", "highlight", "tokenize", "editor"]
categories = ["text-processing", "parsing"]
description = "TextMate-style syntax loading and tokenization on top of syntect"

[lib]
path = "src/lib.rs"

[dependencies]
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
