[package]
name = "neco-watchnorm"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Host-agnostic file watcher event normalization and batch coalescing"
repository = "https://github.com/barineco/neco-editor"
readme = "README.md"
documentation = "https://docs.rs/neco-watchnorm"
keywords = ["watcher", "file", "rename", "normalize", "runtime"]
categories = ["algorithms", "filesystem"]

[lib]
path = "src/lib.rs"
